# embedder

./: Cargo.toml  README.md  compose.yaml  dockerfile  embedder-db.session.sql
docs/: api.md
embedder-bin/: Cargo.toml
embedder-bin/src/: main.rs
embedder-core/: Cargo.toml
embedder-core/src/: embedders.rs  errors.rs  lib.rs
embedder-core/src/embedders/: ollama.rs  openai.rs
embedder-core/tests/: embedding.rs
embedder-web/: Cargo.toml
embedder-web/embedder-core/src/: lib.rs
embedder-web/embedder-core/src/embedders/: openai.rs
embedder-web/src/: config.rs  errors.rs  lib.rs  responses.rs  routes.rs
embedder-web/src/routes/: embed.rs
embedder-web/tests/: endpoints.rs
scripts/: build.sh  deploy-tests.sh
src/: db.rs  embedding.rs  errors.rs  lib.rs  main.rs
tests/: from_datasets.rs  global.rs  inputs.rs
tests/ressources/: countries.json
