[package]
name = "embedder"
version = "0.1.0"
edition = "2021"

[dependencies]
embedder-core = { workspace = true }
dotenv = "0.15.0"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres"] }

[dev-dependencies]
rand = "0.8.5"
serde_json = "1.0.135"
tokio = { version = "1.42.0", features = ["full"] }

[workspace.dependencies]
embedder-core = { path = "embedder-core", version = "0.1.0" }
