[package]
name = "embedder"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["embedder-web", "embedder-web/embedder-core"]

[dependencies]
embedder-web = { path = "embedder-web", version = "0.1.0" }
actix-web = { workspace = true }
env_logger = "0.11.6"
num_cpus = "1.16.0"

[workspace.dependencies]
actix-web = "4.9.0"
serde = { version = "1.0.217", features = ["derive"] }
